# poly-glide-template-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.github/workflows /: deploy.yml
examples/: hello_poly.py
